@@ -14,13 +14,14 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FlightServiceImpl implements FlightService {
 
     private final FlightRepository flightRepository;
+
+    private static final String RESOURCE_NAME = "Flight";
 
     @Override
     public FlightResponse createFlight(FlightRequest flightRequest) {
@@ -36,13 +37,13 @@ public class FlightServiceImpl implements FlightService {
     public List<FlightResponse> getAllFlights() {
         return flightRepository.findAll().stream()
                 .map(FlightMapper.INSTANCE::flightToFlightResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public FlightResponse getFlight(Long id) {
         Flight flight = flightRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flight", "id", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NAME, "id", id.toString()));
         return FlightMapper.INSTANCE.flightToFlightResponse(flight);
     }
 
@@ -50,7 +51,7 @@ public class FlightServiceImpl implements FlightService {
     @Transactional
     public FlightResponse updateFlight(Long id, FlightRequest flightRequest) {
         Flight flight = flightRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flight", "id", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NAME, "id", id.toString()));
         flight.setFlightNumber(flightRequest.getFlightNumber());
         flight.setAirline(flightRequest.getAirline());
         flight.setAircraftType(flightRequest.getAircraftType());
@@ -68,7 +69,7 @@ public class FlightServiceImpl implements FlightService {
     @Transactional
     public void deleteFlight(Long id) {
         Flight flight = flightRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Flight", "id", id.toString()));
+                .orElseThrow(() -> new ResourceNotFoundException(RESOURCE_NAME, "id", id.toString()));
         flightRepository.delete(flight);
     }
 }
