@@ -43,7 +43,7 @@ public class UserServiceImpl implements UserService {
         Page<User> page = userRepository.findAll(pageable);
         List<UserResponse> users = page.getContent().stream()
                 .map(UserMapper.INSTANCE::userToUserResponse)
-                .collect(Collectors.toList());
+                .toList();
         PaginatedAndSortedUserResponse userResponse = new PaginatedAndSortedUserResponse();
         userResponse.setContent(Collections.singletonList(users));
         userResponse.setPageNumber(page.getNumber());
